2007-02-06  Tomas Mraz  <t8m@centrum.cz>

	* modules/pam_loginuid/pam_loginuid.c (set_loginuid): Remove
	debug syslog message when loginuid doesn't exist.

2007-02-01  Tomas Mraz  <t8m@centrum.cz>

	* xtests/tst-pam_unix3.c: Fix typos in comments.
	
	* modules/pam_unix/support.c (_unix_verify_password): Explicitly
	disallow '!' in the beginning of password hash. Treat only
	13 bytes password hash specifically. (Suggested by Solar Designer.)
	Fix a warning and test for allocation failure.
	* modules/pam_unix/unix_chkpwd.c (_unix_verify_password): Likewise.

2007-01-31  Thorsten Kukuk  <kukuk@thkukuk.de>

	* xtests/Makefile.am: Add new pam_unix.so tests
	* xtests/run-xtests.sh: Prefer shell scripts (wrapper)
	over binaries.
	* xtests/tst-pam_cracklib1.c: Fix typo.
	* xtests/tst-pam_unix1.c: New, for sucurity fix.
	* xtests/tst-pam_unix1.pamd: New.
	* xtests/tst-pam_unix1.sh: New.
	* xtests/tst-pam_unix2.c: New, for crypt checks.
	* xtests/tst-pam_unix2.pamd: New.
	* xtests/tst-pam_unix2.sh: New.
	* xtests/tst-pam_unix3.c: New, for bigcrypt checks.
	* xtests/tst-pam_unix3.pamd: New.
	* xtests/tst-pam_unix3.sh: New.

2007-01-23  Thorsten Kukuk  <kukuk@suse.de>

	* release 0.99.7.1

	* configure.in: Set version number to 0.99.7.1

2007-01-23  Thorsten Kukuk  <kukuk@thukuk.de>
	    Tomas Mraz  <t8m@centrum.cz>

	* modules/pam_unix/support.c (_unix_verify_password): Always
	compare full encrypted passwords (CVE-2007-0003).

2007-01-23  Tomas Mraz  <t8m@centrum.cz>

	* modules/pam_loginuid/Makefile.am (AM_LDFLAGS): Add LIBAUDIT.

	* modules/pam_selinux/Makefile.am (pam_selinux_check_LDFLAGS): Add
	AM_LDFLAGS.
	(pam_selinux_la_LDFLAGS): Likewise.

2007-01-17  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release 0.99.7.0

	* configure.in: Set version number to 0.99.7.0

	* Makefile.am (M4_FILES): Replace GNU make extension by listing
	all m4 files.

2007-07-17  Tomas Mraz  <t8m@centrum.cz>

	* po/*.po: Updated strings to translate.
	* po/Linux-PAM.pot: Likewise.
